// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plateletAdminChangeUserEmail change the user's email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "query": "getUserQuery",
        "variables": Object {
          "id": "userId",
        },
      },
      "https://api.example.com/graphql",
    ],
    Array [
      Object {
        "query": "updateUserMutation",
        "variables": Object {
          "input": Object {
            "_version": 1,
            "contact": Object {
              "emailAddress": "some@email.com",
            },
            "id": "userId",
          },
        },
      },
      "https://api.example.com/graphql",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`plateletAdminChangeUserEmail change the user's email 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "UserAttributes": Array [
          Object {
            "Name": "email",
            "Value": "some@email.com",
          },
          Object {
            "Name": "email_verified",
            "Value": "true",
          },
        ],
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "promise": [Function],
      },
    },
  ],
}
`;

exports[`plateletAdminChangeUserEmail change the user's email 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Filter": "email = \\"some@email.com\\"",
        "Limit": 1,
        "UserPoolId": "somePoolId",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "promise": [Function],
      },
    },
  ],
}
`;

exports[`plateletAdminChangeUserEmail change the user's email appsync failure 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "query": "getUserQuery",
        "variables": Object {
          "id": "userId",
        },
      },
      "https://api.example.com/graphql",
    ],
    Array [
      Object {
        "query": "updateUserMutation",
        "variables": Object {
          "input": Object {
            "_version": 1,
            "contact": Object {
              "emailAddress": "some@email.com",
            },
            "id": "userId",
          },
        },
      },
      "https://api.example.com/graphql",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`plateletAdminChangeUserEmail change the user's email appsync failure 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "UserAttributes": Array [
          Object {
            "Name": "email",
            "Value": "some@email.com",
          },
          Object {
            "Name": "email_verified",
            "Value": "true",
          },
        ],
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
    Array [
      Object {
        "UserAttributes": Array [
          Object {
            "Name": "email",
            "Value": "originalEmail@example.com",
          },
          Object {
            "Name": "email_verified",
            "Value": "true",
          },
        ],
        "UserPoolId": "somePoolId",
        "Username": "username",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "promise": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "promise": [Function],
      },
    },
  ],
}
`;

exports[`plateletAdminChangeUserEmail fail changing the user's email to an existing email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Filter": "email = \\"some@email.com\\"",
        "Limit": 1,
        "UserPoolId": "somePoolId",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "promise": [Function],
      },
    },
  ],
}
`;
